fixed alignment of circles

--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,12 @@ header {
 
 .yellow {
   float: left;
-  margin: 0 30px 0 200px;
+  margin: 0 50px 0 400px;
 }
 
 .red {
   float: right;
-  margin: 0 0 0 684.5px;
+  margin: 0 0 0 850.5px;
 }
 
 /* DREAM ACADEMY TEXT STYLING */
